--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "gloudemans/shoppingcart": "^2.5",
-        "maatwebsite/excel": "^2.1",
+        "maatwebsite/excel": "~2.1.0",
         "fedeisas/laravel-mail-css-inliner": "^2.2"
     },
     "require-dev": {
