--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "gloudemans/shoppingcart": "^2.5",
         "maatwebsite/excel": "~2.1.0",
-        "fedeisas/laravel-mail-css-inliner": "^2.2"
+        "fedeisas/laravel-mail-css-inliner": "^2.2",
+        "laravelcollective/html": "^5.2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
