--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=pizza
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -18,10 +18,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
 MAIL_USERNAME=kienkienutc95@gmail.com
 MAIL_PASSWORD=kien@1234@
 MAIL_ENCRYPTION=tls
